--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <ul style="list-style-type: none; padding-left: 1rem;">
 <li><a class="nav-link" href="index.html">Startseite</a></li>
 <li><a class="nav-link" href="https://ein-satz-gegen-antisemitismus.de/finder">⸢ Satz ⸥ - Finder</a></li>
-<li><a class="nav-link" href="ueber.html">Über das Projekt</a></li>
+<li><a class="nav-link" href="https://ein-satz-gegen-antisemitismus.de/ueber">Über das Projekt</a></li>
 </ul>
 </nav>
 <!-- Banner -->
