--- a/impressum.html
+++ b/impressum.html
@@ -38,59 +38,10 @@
 
   <main class="content">
     <h2>Impressum</h2>
-    <p><strong>I. Informationen über die Verarbeitung Ihrer Daten gemäß Art. 13 der Datenschutz-Grundverordnung (DS-GVO)</strong></p>
-    <p><strong>1. Verantwortlicher und Datenschutzbeauftragter</strong><br />
-    Verantwortlich für diese Website ist<br />
-    ⸢ Ein Satz ⸥<br />
-    Den Datenschutzbeauftragten erreichen Sie per E-Mail unter<br />
-    info (at) ein-satz-gegen-antisemitismus.de<br /><br />
-    Aus Sicherheitsgründen wird der Name der verantwortlichen Person(en) nicht veröffentlicht. Bei berechtigtem Interesse an Auskunft wenden Sie sich bitte per E-Mail an uns. Die Daten werden bei berechtigtem Anlass selbstverständlich offengelegt.<br />
-    Diese Entscheidung stützt sich auf Art. 6 Abs. 1 lit. f DSGVO – unser berechtigtes Interesse am Schutz der körperlichen Unversehrtheit überwiegt in diesem Fall das Informationsinteresse Dritter.</p>
 
-    <p><strong>2. Daten, die für die Bereitstellung der Website und die Erstellung der Protokolldateien verarbeitet werden</strong></p>
-    <p>a. Welche Daten werden für welchen Zweck verarbeitet?<br />
-    Bei jedem Zugriff auf Inhalte der Website werden vorübergehend Daten gespeichert, die möglicherweise eine Identifizierung zulassen:
-    <ul>
-      <li>Datum und Uhrzeit des Zugriffs</li>
-      <li>IP-Adresse</li>
-      <li>Hostname des zugreifenden Rechners</li>
-      <li>Website, von der aus die Website aufgerufen wurde</li>
-      <li>Websites, die über die Website aufgerufen werden</li>
-      <li>Besuchte Seite auf unserer Website</li>
-      <li>Meldung, ob der Abruf erfolgreich war</li>
-      <li>Übertragene Datenmenge</li>
-      <li>Informationen über den Browsertyp und die verwendete Version</li>
-      <li>Betriebssystem</li>
-    </ul>
-    Die Speicherung dient dem technischen Betrieb und der Sicherheit unserer Website.</p>
+<p>Verantwortlich für diese Website: ⸢ Ein Satz ⸥</p>
+<p>E-Mail: info (at) ein-satz-gegen-antisemitismus.de</p>
+<p>Aus Sicherheitsgründen wird der Name der verantwortlichen Person(en) nicht veröffentlicht. Bei berechtigtem Interesse an Auskunft wenden Sie sich bitte per E-Mail an uns. Die Daten werden bei berechtigtem Anlass selbstverständlich offengelegt.</p>
 
-    <p>b. Auf welcher Rechtsgrundlage werden diese Daten verarbeitet?<br />
-    Art. 6 Abs. 1 lit. f DS-GVO</p>
-
-    <p>c. Gibt es neben dem Verantwortlichen weitere Empfänger?<br />
-    Die Website wird bei folgendem Anbieter gehostet:<br />
-    Dynadot LLC<br />
-    210 S Ellsworth Ave #345<br />
-    San Mateo, CA 94401<br />
-    USA<br />
-    E-Mail: info@dynadot.com<br />
-    Website: <a href="https://www.dynadot.com/">https://www.dynadot.com/</a><br />
-    Der Hoster empfängt die oben genannten Daten als Auftragsverarbeiter.</p>
-
-    <p>d. Wie lange werden die Daten gespeichert?<br />
-    Die Daten werden gelöscht, sobald sie für den Zweck nicht mehr erforderlich sind – meist mit Sitzungsende. Protokolldateien sind bis zu 24 Stunden direkt zugänglich und werden spätestens nach vier Wochen gelöscht.</p>
-
-    <p><strong>3. Betroffenenrechte</strong><br />
-    a. Auskunft (Art. 15 DS-GVO)<br />
-    b. Widerspruch (Art. 21 DS-GVO)<br />
-    c. Berichtigung (Art. 16 DS-GVO)<br />
-    d. Löschung (Art. 17 DS-GVO)<br />
-    e. Einschränkung (Art. 18 DS-GVO)<br />
-    f. Beschwerde (Art. 77 DS-GVO): Sie haben das Recht, sich bei einer Datenschutzaufsichtsbehörde Ihrer Wahl zu beschweren.<br />
-    g. Datenübertragbarkeit (Art. 20 DS-GVO – in der Regel nicht anwendbar)</p>
-
-    <p><strong>II. Recht auf Widerspruch gemäß Art. 21 Abs. 1 DS-GVO</strong><br />
-    Sie haben das Recht, aus Gründen, die sich aus Ihrer besonderen Situation ergeben, jederzeit gegen die Verarbeitung Ihrer personenbezogenen Daten, die aufgrund von Artikel 6 Abs. 1 Buchstabe f DS-GVO erfolgt, Widerspruch einzulegen.</p>
-  </main>
 </body>
 </html>
