--- a/ueber.html
+++ b/ueber.html
@@ -47,9 +47,10 @@
   <main class="ueber-section">
     <h2>Ausgangslage</h2>
     <p>
-      Juden im sächsischen Schulunterricht begegnen Schülern primär in wenigen Narrativen und Fächern. 
-      Sie werden meist als Opfer, manchmal als Täter, aber kaum als Vorbilder nahezu ausschließlich in den 
-      Fächern Geschichte und Religion thematisiert.
+      <strong>Juden im Schulunterricht: meist Opfer, manchmal Täter – fast nie Vorbild, eine Begegnung begrenzt auf einzelne Fächer.</strong> 
+Fast nur im Geschichtsunterricht kommen Schüler in Berührung mit Juden, hin und wieder auch im Sozialwissenschafts- oder Politikunterricht. 
+Thematisiert wird nahezu ausschließlich der Holocaust. Zusätzlich wird vereinzelt Israel behandelt, meist im Kontext des Nahostkonflikts – häufig als Aggressor.
+Unser Projekt strebt eine Erweiterung über die bisherigen Narrative und Fachbereiche hinaus an.
     </p>
 
     <h2>⸢ Ein Satz ⸥</h2>
