--- a/ueber.html
+++ b/ueber.html
@@ -47,7 +47,7 @@
   <main class="ueber-section">
     <h2>Ausgangslage</h2>
     <p>
-      <strong>Juden im Schulunterricht: meist Opfer, manchmal Täter – fast nie Vorbild, eine Begegnung begrenzt auf einzelne Fächer.</strong> 
+      <strong>Juden im Schulunterricht: meist Opfer, manchmal Täter – fast nie Vorbild.</strong> 
 Fast nur im Geschichtsunterricht kommen Schüler in Berührung mit Juden, hin und wieder auch im Sozialwissenschafts- oder Politikunterricht. 
 Thematisiert wird nahezu ausschließlich der Holocaust. Zusätzlich wird vereinzelt Israel behandelt, meist im Kontext des Nahostkonflikts – häufig als Aggressor.
 Unser Projekt strebt eine Erweiterung über die bisherigen Narrative und Fachbereiche hinaus an.
