--- a/ueber.html
+++ b/ueber.html
@@ -55,8 +55,12 @@ Unser Projekt strebt eine Erweiterung über die bisherigen Narrative und Fachber
 
     <h2>⸢ Ein Satz ⸥</h2>
     <p>
-      Das Projekt stellt Lehrkräften eine einfache Vorlage in Form von ⸢ Ein Satz ⸥ - erweiterten Lehrplänen 
-      zur Verfügung, um jüdische Vorbilder in einer breiten Auswahl schulischer Fächer sichtbar zu machen.
+      Das Projekt stellt Lehrkräften eine einfache Vorlage in Form von ⸢Ein Satz⸥–erweiterten Lehrplänen zur Verfügung, um jüdische Vorbilder in einer breiten Auswahl schulischer Fächer sichtbar zu machen – jeweils in einem Satz, der auf einen jüdischen Nobelpreisträger mit fachbezogener Entdeckung verweist.
+<h2>Hintergrund</h2>
+    <p>
+      Obwohl Juden nur 0,2 % der Weltbevölkerung ausmachen, erhielten sie in den letzten 120 Jahren über 20 % der Nobelpreise – 
+      jene Auszeichnung, die für Arbeiten verliehen wird, die der Menschheit den größten Nutzen gebracht haben.
+    </p>
     </p>
 
     <h2>Lehrkräfte & Schulen</h2>
@@ -72,6 +76,13 @@ Unser Projekt strebt eine Erweiterung über die bisherigen Narrative und Fachber
     <p>
       Wir sind ein Team aus Wissenschaft und Schule mit dem Ziel, antisemitismuskritische Bildung praktisch 
       und fachnah zu stärken.
+    </p>
+
+    
+    <h2>Hintergrund</h2>
+    <p>
+      Obwohl Juden nur 0,2 % der Weltbevölkerung ausmachen, erhielten sie in den letzten 120 Jahren über 20 % der Nobelpreise – 
+      jene Auszeichnung, die für Arbeiten verliehen wird, die der Menschheit den größten Nutzen gebracht haben.
     </p>
 
     <h2>Kontakt</h2>
