--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 
 <html lang="de">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Ein Satz – Startseite</title>
-<link href="index-style.css" rel="stylesheet"/>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+  <title>Ein Satz – Startseite</title>
+  <link href="index-style.css" rel="stylesheet"/>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 </head>
 <body>
 <!-- Navigation -->
